# oncofiles

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DISASTER_RECOVERY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  patient_context.example.json  pyproject.toml  railway.toml  server.json
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: devita-ch40-colon-cancer-reference.md  oncoteam-source-attribution-prompt.md  product-vision.md
migrations/: 001_initial_schema.sql  002_document_pages.sql  003_conversation_entries.sql  004_agent_state.sql  005_treatment_events.sql  006_research_entries.sql  007_activity_log.sql  008_document_ai_metadata.sql  009_oauth_tokens.sql  010_sync_state.sql  011_structured_metadata.sql  012_soft_delete.sql  013_owner_email.sql  014_lab_values.sql  015_mcp_oauth_state.sql  016_advocate_category.sql  017_migration_tracking.sql  018_patient_context.sql  019_document_versioning.sql  020_document_cross_references.sql  021_merge_imaging_categories.sql  022_sync_history.sql  023_rename_trigger_column.sql  024_prompt_log.sql  025_gdrive_md5.sql  026_gmail_entries.sql  027_calendar_entries.sql  028_patients.sql  029_patient_id_columns.sql  030_rename_user_id.sql  031_merge_categories.sql  032_conversation_session_type.sql  033_prompt_log_patient_id.sql  034_uuid_patient_ids.sql  035_uuid_pk_swap.sql  036_patient_context_per_patient.sql  037_agent_state_unique_fix_and_sync_history_patient.sql  038_patient_tokens.sql  039_patient_profile.sql  040_e5g_general_health_patient.sql  (+28 more)
scripts/: devita_ocr.py  (+11 more)
(+216 files in other folders)
